# NexusIntel

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start.sh
backend/: .dockerignore  Dockerfile  artifact_classifier.py  main.py  queues.py  recon_validators.py  requirements.txt  tasks.py
core/: __init__.py  engine.py  flows.py  graph.py  readiness.py  render.py  reporter.py  schemas.py  targets.py  user_analytics.py  vault.py
dashboard/: __init__.py  server.py
docs/: API.md  ARCHITECTURE.md  BROWSER_ASSISTED_OSINT.md  CONNECTOR_MARKETPLACE.md  CORRELATION_ENGINE.md  CRYPTO_INTELLIGENCE.md  DASHBOARD.md  DEPLOYMENT.md  ENTERPRISE_GAP_ANALYSIS.md  ENTITY_TAXONOMY.md  EVIDENCE_OS.md  EVIDENCE_VALIDATION.md  FRONTEND_ENTERPRISE_QA.md  GRAPH_UX_QA.md  HYPOTHESIS_ENGINE.md  IMAGE_INTELLIGENCE.md  IMPORTERS.md  INVESTIGATOR_BRAIN.md  LOCAL_AI.md  LOCAL_AI_MODELS.md  LOCAL_FREE_OSINT_STRATEGY.md  MODULES.md  NEXUSINTEL_BLUEPRINT.md  NOISE_KILLER.md  NSA_GRADE_MODULES.md  PERSON_ORG_OSINT.md  PLAYBOOKS.md  PROJECT_STRUCTURE.md  REFERENCES.md  REPORT_BUILDER.md  REPORT_READINESS.md  REPO_CLEANUP_AUDIT.md  REQUIREMENTS.md  SOURCE_CATALOG.md  TRANSFORM_REGISTRY_AUDIT.md  TRANSFORM_SYSTEM_QA.md  analyst-enrichment-pipeline.md  analyst-workflows.md  google-maps-public-evidence.md  impersonation-investigation-mode.md  (+8 more)
frontend/: Dockerfile  Dockerfile.yjs  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.js
legacy/: README.md
modules/: __init__.py  account_pivots.py  account_presence.py  active_surface.py  domain_intelligence.py  flowsint_insight.py  ghunt_recon.py  header_diagnostics.py  holehe_style.py  identity_expansion.py  intel_assistant.py  ip_asn_lookup.py  network_mapping.py  phone_intel.py  sherlock_username.py  user_analytics.py  username_presence.py  website_surface.py
nexusrecon/: __init__.py  main.py
recon/: __init__.py  (+3 more)
(+246 files in other folders)
