[project]
name = "data-aggregator"
version = "0.1.0"
description = "Unified OSINT scanner combining analytics modules, username enumeration, email, phone, and domain discovery."
readme = "README.md"
authors = [ { name = "LogsOneX" } ]
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
keywords = ["osint", "recon", "username", "domain", "email", "scanner"]
dependencies = [
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "aiohttp>=3.8.0",
    "colorama>=0.4.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]

[project.scripts]
data-aggregator = "main:main"
nexusrecon = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "dashboard*", "recon*", "modules*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
